# openai-batch

./: .gitignore  README.md  main.py  pyproject.toml
example/: main.py
openai_batch/: __init__.py  cli.py  config.py  const.py  exception.py  model.py  runner.py  utils.py  worker.py
openai_batch/db/: __init__.py  database.py  schema.py
openai_batch/openai/: __init__.py  upload.py  utils.py
openai_batch/script/: add-work.ps1
openai_batch/scripts/: register-task.ps1  register-work.ps1
openai_batch/stage/: __init__.py  create.py  end.py  fail.py  running.py  stage.py  start.py
openai_batch/status/: __init__.py  checked.py  created.py  exception.py  status.py  stopped.py  utils.py
tests/: test_cli.py  test_runner.py  test_utils.py  test_worker.py
