[tool.poetry]
name = "openai-batch"
version = "0.1.0"
description = ""
authors = ["observer <wozluohd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.23.6"
pydantic = "^2.7.1"
python-daemon = "^3.0.1"
pytest = "^8.2.0"
sqlmodel = "^0.0.18"
python-pidfile = "^3.1.1"
tomli-w = "^1.0.0"
prettytable = "^3.10.0"
ansicolors = "^1.1.8"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
