[tool.poetry]
name = "openai-batch"
version = "0.1.0"
description = ""
authors = ["observer <wozluohd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.37.1"
pydantic = "^2.8.2"
python-daemon = "^3.0.1"
sqlmodel = "^0.0.18"
typer = "^0.12.3"
rich = "^13.7.1"
python-crontab = "^3.0.0"
python-pidfile = "^3.1.1"
toml = "^0.10.2"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
